--- a/less/_mixins.less
+++ b/less/_mixins.less
@@ -83,7 +83,7 @@
   transform: @arguments;
 }
 
-.transition(@duration:0.2s, @ease:(cubic-bezier(0.2,0.3,0.25,0.9))) {
+.transition(@duration:0.25s, @ease:(cubic-bezier(0.2,0.3,0.25,0.9))) {
   -webkit-transition: all @duration @ease;
   -moz-transition: all @duration @ease;
   -o-transition: all @duration @ease;
