--- a/less/design.less
+++ b/less/design.less
@@ -185,12 +185,14 @@ nav {
 #menu-toggle {
   position: absolute;
   right: 25px;
-  top: 30px;
+  top: 10px;
   color: @link;
   font-family: @sans;
   text-transform: uppercase;
   font-size: 1em;
   font-weight: 500;
+  display: inline-block;
+  padding: 20px 0 10px 20px;
 }
 
 .mobile-nav {
@@ -203,11 +205,12 @@ nav {
 
 #nav-close {
   position: absolute;
-  right: 20px;
-  top: 30px;
+  right: 0;
+  top: 10px;
   color: @white;
   font-size: 1em;
   font-family: @icon;
+  padding: 20px 20px 10px 20px;
   &:hover, &:focus {
     color: @link;
   }
@@ -230,6 +233,9 @@ nav {
 .logo {
   margin-top: 5px;
   line-height: 1;
+  a {
+    .transition;
+  }
 }
 
 .tagline {
@@ -260,6 +266,7 @@ nav {
     width: 100%;
     height: 52px;
     border-bottom: 1px solid @navpale;
+    .transition;
     #menu-toggle {
       color: @white;
       right: 20px;
